--- a/src/main/resources/templates/add-train.html
+++ b/src/main/resources/templates/add-train.html
@@ -8,46 +8,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div>
-    <h1>Добавить новый поезд</h1>
+    <div th:replace="~{fragments/navbar}"></div>
 
-    <form th:action="@{/add-train}" th.object="$train" method="post">
-        <div class="form-group">
-            <label for="number">Номер поезда:</label>
-            <input type="text" id="number" name="number" required>
-        </div>
+    <div>
+        <h1>Добавить новый поезд</h1>
 
-        <div class="form-group">
-            <label for="fromCity">Станция отправления:</label>
-            <input type="text" id="fromCity" name="fromCity" required>
-        </div>
+        <form th:action="@{/add-train}" th.object="$train" method="post">
+            <div class="form-group">
+                <label for="number">Номер поезда:</label>
+                <input type="text" id="number" name="number" required>
+            </div>
 
-        <div class="form-group">
-            <label for="toCity">Станция прибытия:</label>
-            <input type="text" id="toCity" name="toCity" required>
-        </div>
+            <div class="form-group">
+                <label for="fromCity">Станция отправления:</label>
+                <input type="text" id="fromCity" name="fromCity" required>
+            </div>
 
-        <div class="form-group">
-            <label for="departureDatetime">Дата отправления:</label>
-            <input type="datetime-local" id="departureDatetime" name="departureDatetime" required>
-        </div>
+            <div class="form-group">
+                <label for="toCity">Станция прибытия:</label>
+                <input type="text" id="toCity" name="toCity" required>
+            </div>
 
-        <div class="form-group">
-            <label for="departureDatetime">Дата прибытия:</label>
-            <input type="datetime-local" id="arrivalDatetime" name="arrivalDatetime" required>
-        </div>
+            <div class="form-group">
+                <label for="departureDatetime">Дата отправления:</label>
+                <input type="datetime-local" id="departureDatetime" name="departureDatetime" required>
+            </div>
 
-        <div class="form-group">
-            <label for="platform">Платформа:</label>
-            <input type="text" id="platform" name="platform">
-        </div>
+            <div class="form-group">
+                <label for="departureDatetime">Дата прибытия:</label>
+                <input type="datetime-local" id="arrivalDatetime" name="arrivalDatetime" required>
+            </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-save">Сохранить</button>
-            <a th:href="@{/}" class="btn btn-cancel">Назад</a>
-        </div>
-    </form>
-</div>
+            <div class="form-group">
+                <label for="platform">Платформа:</label>
+                <input type="text" id="platform" name="platform">
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-save">Сохранить</button>
+                <a th:href="@{/}" class="btn btn-cancel">Назад</a>
+            </div>
+        </form>
+    </div>
 
 
 </body>
