Добавлена страница администратора с возможностью изменения ролей

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <div class=".bg-secondary.bg-gradient"></div>
     <div th:replace="~{fragments/navbar}"></div>
 
     <h2>Поиск</h2>
