Добавлена статистика: - общее количество пользователей - популярные направления(гистограмма)

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,6 +18,9 @@
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/admin}">Админка</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/about}">Об авторе</a>
+                </li>
             </ul>
 
             <ul class="navbar-nav">
