--- a/src/main/resources/templates/update-train.html
+++ b/src/main/resources/templates/update-train.html
@@ -28,12 +28,20 @@
             <input type="text" id="toCity" th:field="*{toCity}" required>
         </div>
         <div>
-            <label for="departureDatetime">Дата отправления:</label>
-            <input type="text" id="departureDatetime" th:field="*{departureDatetime}" required>
+            <label for="departureDate">Дата отправления:</label>
+            <input type="text" id="departureDate" th:field="*{departureDate}" required>
         </div>
         <div>
-            <label for="arrivalDatetime">Дата прибытия:</label>
-            <input type="text" id="arrivalDatetime" th:field="*{arrivalDatetime}" required>
+            <label for="arrivalDate">Дата прибытия:</label>
+            <input type="text" id="arrivalDate" th:field="*{arrivalDate}" required>
+        </div>
+        <div>
+            <label for="departureTime">Дата отправления:</label>
+            <input type="text" id="departureTime" th:field="*{departureTime}" required>
+        </div>
+        <div>
+            <label for="arrivalTime">Дата прибытия:</label>
+            <input type="text" id="arrivalTime" th:field="*{arrivalTime}" required>
         </div>
         <div>
             <label for="platform">Платформа:</label>
