--- a/src/main/resources/templates/add-train.html
+++ b/src/main/resources/templates/add-train.html
@@ -30,13 +30,23 @@
             </div>
 
             <div class="form-group">
-                <label for="departureDatetime">Дата отправления:</label>
-                <input type="datetime-local" id="departureDatetime" name="departureDatetime" required>
+                <label for="departureDate">Дата отправления:</label>
+                <input type="date" id="departureDate" name="departureDate" required>
             </div>
 
             <div class="form-group">
-                <label for="departureDatetime">Дата прибытия:</label>
-                <input type="datetime-local" id="arrivalDatetime" name="arrivalDatetime" required>
+                <label for="arrivalDate">Дата прибытия:</label>
+                <input type="date" id="arrivalDate" name="arrivalDate" required>
+            </div>
+
+            <div class="form-group">
+                <label for="departureTime">Время отправления:</label>
+                <input type="time" id="departureTime" name="departureTime" required>
+            </div>
+
+            <div class="form-group">
+                <label for="arrivalTime">Время прибытия:</label>
+                <input type="time" id="arrivalTime" name="arrivalTime" required>
             </div>
 
             <div class="form-group">
