--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<body>
-<!-- Навигационное меню -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">Railway</a>
+<link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
 
-        <div class="collapse navbar-collapse">
+<body>
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">->TudaSuda<-</a>
+<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+        <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Главная</a>
+                    <a class="nav-link active" th:href="@{/}">Главная
+                        <span class="visually-hidden">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/stats}">Статистика</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                    <a class="nav-link" th:href="@{/admin}">Админка</a>
+                    <a class="nav-link" th:href="@{/admin}">Пользователи</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/about}">Об авторе</a>
                 </li>
             </ul>
-
             <ul class="navbar-nav">
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/login}">Вход</a>
@@ -35,9 +39,25 @@
                         <button class="btn btn-link nav-link" type="submit">Выйти</button>
                     </form>
                 </li>
+
             </ul>
         </div>
     </div>
 </nav>
+<!--            <ul class="navbar-nav">-->
+<!--                <li class="nav-item" sec:authorize="!isAuthenticated()">-->
+<!--                    <a class="nav-link" th:href="@{/login}">Вход</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="!isAuthenticated()">-->
+<!--                    <a class="nav-link" th:href="@{/register}">Регистрация</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
+<!--                    <form th:action="@{/logout}" method="post">-->
+<!--                        <button class="btn btn-link nav-link" type="submit">Выйти</button>-->
+<!--                    </form>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--    </div>-->
+<!--</nav>-->
 </body>
 </html>
